[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-web = "4"
futures-util = "0.3.28"
mysql = "24.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.0", features = ["fs"]}

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]